# batterylab.online

./: .env.example  .gitignore  LICENSE  README.md  agent.py  langgraph.json  pyproject.toml  start-backend.ps1
battery_agent/: __init__.py  cell_catalog.py  cell_datasheet_extraction.py  equipment_manuals.py  kb.py  knowledge.py  literature.py  method_handbook.py  methods.py  planning_context.py  prompts.py  provisional_cell_assets.py  registries.py  tools.py  workflow_assets.py
battery_agent/data_adapters/: __init__.py  base.py  factory.py  generic.py  models.py  schema.py  utils.py  vendors.py
data/kb/: decision_relation_model.json  equipment_rules.json  objective_templates.json  safety_checklists.json  (+1 more)
docs/: architecture.md  project_status.md  workflow_map.md
scripts/: bootstrap_backend.ps1  bootstrap_demo.ps1  bootstrap_ui.ps1  extract_battery_test_methods.py  extract_pdf_attachment_text.py  import_cellinfo_repository.py  provisional_cell_asset_admin.py  register_uploaded_cell_datasheet.py  render_experiment_plan_pdf.py  run_backend.ps1  run_demo.ps1  run_ui.ps1  run_ui_bg.ps1
tests/: test_backend_framework_scaffold.py  test_cell_catalog_export.py  test_cell_datasheet_extraction.py  test_chamber_constraints.py  test_data_adapters.py  test_equipment_manual_assets.py  test_literature_assets.py  test_method_handbook_assets.py  test_objective_aliases.py  test_prompt_guardrails.py  test_provisional_cell_asset_workflow.py  test_registry_governance_and_naion_assets.py  test_selected_cell_planning.py
ui/: Dockerfile  README.md  package.json  start-next-ui.ps1
(+153 files in other folders)
